--- a/index.html
+++ b/index.html
@@ -20,6 +20,41 @@
 		<link href="assets/stylesheets/css/main.css" rel="stylesheet">
 	</head>
 	<body>
+		<nav class="js-nav navbar navbar-expand-md navbar-dark fixed-top">
+			<div class="container">
+				<a class="navbar-brand" href="index.html">
+					<img src="assets/images/brand/jk-logo-white.svg" alt="JK Logo">
+					<span>Jonasz Kądziela</span>
+				</a>
+				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarCollapse">
+					<ul class="navbar-nav ml-auto">
+						<li class="nav-item">
+							<a class="nav-link js-scroll-trigger" href="#intro">Wstęp</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link js-scroll-trigger" href="#about">O mnie</a>
+						</li>
+						<li class="nav-item">
+								<a class="nav-link js-scroll-trigger" href="#authorities">Autorytety</a>
+						</li>
+						<li class="nav-item">
+								<a class="nav-link js-scroll-trigger" href="#hobbies">Pasje</a>
+						</li>
+						<li class="nav-item">
+								<a class="nav-link js-scroll-trigger" href="#favourites">Ulubione</a>
+						</li>
+						<li class="nav-item">
+								<a class="nav-link js-scroll-trigger" href="#trips">Podróże</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</nav>
+		<div id="intro" class="hero hero--primary">
+		</div>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.nicescroll/3.7.6/jquery.nicescroll.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/js/bootstrap.bundle.min.js"></script>
