Added intro header

--- a/index.html
+++ b/index.html
@@ -53,10 +53,41 @@
 				</div>
 			</div>
 		</nav>
-		<div id="intro" class="hero hero--primary">
-		</div>
+		<header id="intro" class="hero hero--primary">
+			<div class="container h-100">
+				<div class="row align-items-center h-100">
+					<div class="col-md-10 offset-md-1">
+						<div class="card card--intro flex-row align-items-center">
+							<div class="col">
+								<img class="card-image" src="assets/images/pictures/fullbody-picture.png" alt="Zdjęcie całej osoby">
+							</div>
+							<div class="col card-body">
+								<h3 class="card-title font-weight-bold text-white">
+									Cześć!
+								</h3>
+								<p class="card-subtitle">
+									Nazywam się
+									<span class="font-weight-bold text-white">Jonasz Kądziela</span>
+									i...
+								</p>
+								<p class="card-text">
+									<span class="js-intro"></span>
+								</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="cta cta--intro">
+					<a class="js-scroll-trigger" href="#about">
+						<span>Poznaj mnie bliżej</span>
+						<i class="fas fa-chevron-down"></i>
+					</a>
+				</div>
+			</div>
+		</header>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.nicescroll/3.7.6/jquery.nicescroll.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.7/typed.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/js/bootstrap.bundle.min.js"></script>
 		<script src="assets/javascripts/main.js"></script>
 	</body>
