Added about section

--- a/index.html
+++ b/index.html
@@ -85,6 +85,65 @@
 				</div>
 			</div>
 		</header>
+		<section id="about" class="section">
+			<div class="container">
+				<h1 class="section-title">Historia mojego życia</h1>
+				<div class="card card--about">
+					<div class="row align-items-center">
+						<div class="col-sm-12 order-2 col-md order-md-1">
+							<div class="card-body">
+								<h3 class="card-title">
+									Wstęp
+								</h3>
+								<p class="card-text">
+									Nazywam się Jonasz Kądziela i już od dawna pasjonuję się informatyką. Swoją przygodę z komputerami rozpocząłem od tworzenia prymitywnych gier 2D. Po wielu latach intensywnej nauki znacznie poszerzyłem swoje umiejętności, a miłość do informatyki pozostała.
+								</p>
+							</div>
+						</div>
+						<div class="col-sm-12 order-1 col-md-auto order-md-2">
+							<img class="card-image rounded-circle" src="assets/images/pictures/profile-picture.png" alt="Zdjęcie profilowe">
+						</div>
+					</div>
+					<div id="about-text-collapse" class="collapse card-more">
+						<div class="card-body">
+							<h3 class="card-title">
+								Rozwinięcie
+							</h3>
+							<p class="card-text">
+								Od zawsze chciałem stworzyć własną grę komputerową, dlatego już w 6 klasie podstawówki, w wieku 12 lat wziąłem udział w konkursie informatycznym przeznaczonym dla gimnazjalistów w mojej szkole. Polegał on na stworzeniu dwuwymiarowej gry RPG za pomocą silnika RPG Maker 2003. Stanąłem w obliczu wyzwania, ponieważ konkurowałem z uczniami starszymi ode mnie o kilka lat, a ponadto nigdy wcześniej nie angażowałem się w takie projekty. Na napisane gry poświęciłem kilka dni wytężonej pracy od rana do wieczora. W efekcie będąc jeszcze uczniem szkoły podstawowej zająłem 2 miejsce w konkursie przeznaczonym dla uczniów gimnazjum. Był to moment, w którym uświadomiłem sobie, że chcę związać swoją przyszłość z informatyką.
+							</p>
+							<p class="card-text">
+								W 2 klasie gimnazjum uczęszczałem na dodatkowe zajęcia z programowania organizowane przez nauczyciela informatyki w mojej szkole. Nauczyłem się tam podstaw programowania w języku C++ i od razu wykorzystałem tę umiejętność do napisania tekstowej gry RPG. Bez znajomości: tablic, wskaźników i programowania obiektowego, udało mi się stworzyć olbrzymi silnik gry, w którego skład wchodziło ponad 11000 linijek kodu.
+							</p>
+							<p class="card-text">
+								W trakcie gimnazjum zainteresowałem się dodatkowo grafiką i animacją komputerową. Potrzebowałem oprawy graficznej i „intro” (animowany przerywnik między wstępem a treścią materiału) do swojego kanału YouTube, na którym zamieszczałem wtedy moje poradniki o tworzeniu gier w RPG Maker 2003. Bardzo spodobała mi się praca nad grafiką i animacjami, dlatego zacząłem projektować nieodpłatnie animacje 2D dla moich przyjaciół i subskrybentów. W nieco ponad dwa lata udało mi się zrealizować przeszło 80 projektów.
+							</p>
+							<p class="card-text">
+								Nadszedł wtedy czas wyboru szkoły ponadgimnazjalnej. Po wielu dniach poszukiwania odpowiedniej dla mnie szkoły średniej, doszedłem do wniosku, że jedyną szkołą, do której z chęcią przychodziłbym nawet na „zerówkę”, jest technikum informatyczne. Właśnie dlatego postanowiłem aplikować do klasy informatycznej w najlepszym technikum w Łodzi. Jestem aktualnie uczniem 3 klasy Technikum Informatycznego nr 10 przy ul. Strykowskiej 10/18.
+							</p>
+							<p class="card-text">
+								Nauka w tej szkole pozwoliła mi w znacznym stopniu poszerzyć wiedzę w wielu dziedzinach informatyki. Pomimo młodego wieku, zdobyłem liczne certyfikaty od firmy Cisco oraz uczestniczyłem w dwóch kursach (w tym kurs programowania C++). W roku 2017 wygrałem międzynarodowy konkurs NetRiders IT Essentials organizowany przez firmę Cisco. Jest to szczególnie istotne osiągnięcie, gdyż jestem pierwszym polskim uczniem, któremu udało się tego dokonać.
+							</p>
+							<p class="card-text">
+								W tym roku szkolnym wziąłem również udział w „hackathonie” RoboInspector organizowanym przez FabLab Łódź. Był to wyścig polegający na zaprojektowaniu, zbudowaniu i zaprogramowaniu robota na bazie Arduino w czasie 48 godzin, którego zadaniem miało być przejechanie przez zamknięty tunel z przeszkodami. Mojej drużynie udało się osiągnąć ten cel w niecałe 12 godzin i co najważniejsze, zostaliśmy wyróżnieni przez organizatorów za najbardziej kreatywny sposób rozwiązania zadań.
+							</p>
+							<p class="card-text">
+								Kolejnym projektem, w którym brałem udział w tym roku szkolnym była 40-sta edycja „Ludum Dare”. Jest to największy na świecie konkurs polegający na stworzeniu od początku do końca gry komputerowej podczas jednego weekendu. Napisałem grę 3D typu Tower Defence (obrona wieży) przy użyciu silnika Unity. Cały proces tworzenia gry udokumentowałem na swoim kanale YouTube.
+							</p>
+							<p class="card-text">
+								W wolnym czasie realizuję również wiele spontanicznych pomysłów związanych z informatyką. Stworzyłem między innymi aplikację do zabezpieczania folderu hasłem (w Qt C++) oraz zaprojektowałem i napisałem swoją stronę internetową (w HTML, CSS oraz JavaScript). Moją najnowszą inicjatywą jest zrealizowanie od podstaw serwera na bazie Raspberry Pi, który pełni wiele funkcji. Jest między innymi serwerem stron internetowych i serwerem plików. W tym celu wykorzystałem: Raspbian (odmiana Debiana), Apache, ProFTPD, MySQL, PHP, HTML, CSS oraz JavaScript.
+							</p>
+							<p class="card-text font-weight-bold">
+								Dziękuję bardzo za zapoznanie się z historią mojego życia. Mam nadzieję, że tekst nie zanudził Cię na śmierć :)
+							</p>
+						</div>
+					</div>
+					<div class="card-button">
+						<a class="js-about-text btn btn-primary" data-toggle="collapse" href="#about-text-collapse" role="button" aria-expanded="false" aria-controls="about-text-collapse">Pokaż więcej</a>
+					</div>
+				</div>
+			</div>
+		</section>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.nicescroll/3.7.6/jquery.nicescroll.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.7/typed.min.js"></script>
