--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<meta property="fb:admins" content="100000630277259">
 		<link href="assets/images/brand/favicon.png" rel="shortcut icon" type="image/png">
 		<link href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" rel="stylesheet">
-		<link href="assets/stylesheets/css/main.css" rel="stylesheet">
+		<link href="assets/stylesheets/css/main.min.css" rel="stylesheet">
 	</head>
 	<body>
 		<nav class="js-nav navbar navbar-expand-md navbar-dark fixed-top">
@@ -145,9 +145,10 @@
 			</div>
 		</section>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/css-element-queries/1.0.0/ResizeSensor.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.nicescroll/3.7.6/jquery.nicescroll.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.7/typed.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/js/bootstrap.bundle.min.js"></script>
-		<script src="assets/javascripts/main.js"></script>
+		<script src="assets/javascripts/main.min.js"></script>
 	</body>
 </html>
