--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<link href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" rel="stylesheet">
 		<link href="assets/stylesheets/css/main.min.css" rel="stylesheet">
 	</head>
-	<body>
+	<body id="page-top">
 		<nav class="js-nav navbar navbar-expand-md navbar-dark fixed-top">
 			<div class="container">
 				<a class="navbar-brand" href="index.html">
@@ -144,6 +144,45 @@
 				</div>
 			</div>
 		</section>
+		<footer class="footer">
+			<div class="container">
+				<div class="social-media">
+					<div class="row">
+						<div class="col-sm-12 col-md-6 text-md-right p-0">
+							<a href="https://www.facebook.com/jonaszkadzielapl" target="_blank">
+								<i class="fab fa-facebook-f"></i>
+							</a>
+							<a href="https://www.linkedin.com/in/jonaszkadziela" target="_blank">
+								<i class="fab fa-linkedin-in"></i>
+							</a>
+							<a href="https://www.youtube.com/channel/UCRGptWGCh-CsEEKVOFn_uwg" target="_blank">
+								<i class="fab fa-youtube"></i>
+							</a>
+						</div>
+						<div class="col-sm-12 col-md-6 text-md-left p-0">
+							<a href="https://github.com/jonaszkadziela" target="_blank">
+								<i class="fab fa-github"></i>
+							</a>
+							<a href="https://stackoverflow.com/users/9310738/jonasz-kadziela" target="_blank">
+								<i class="fab fa-stack-overflow"></i>
+							</a>
+							<a href="https://www.jonaszkadziela.pl/" target="_blank">
+								<img class="jk-logo" src="assets/images/brand/jk-logo-black.svg" alt="JK Logo">
+							</a>
+						</div>
+					</div>
+				</div>
+				<div class="copyright">
+					Zaprojektowane i zaprogramowane z <i class="fas fa-heart"></i> przez <a href="https://www.jonaszkadziela.pl/" target="_blank">Jonasza Kądzielę</a>
+				</div>
+				<div class="go-up">
+					<a class="btn btn-primary js-scroll-trigger" href="#page-top">
+						<i class="fas fa-chevron-up"></i>
+						<span>Wróć na górę strony</span>
+					</a>
+				</div>
+			</div>
+		</footer>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/css-element-queries/1.0.0/ResizeSensor.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.nicescroll/3.7.6/jquery.nicescroll.min.js"></script>
