Added authorities section

--- a/index.html
+++ b/index.html
@@ -88,8 +88,11 @@
 		<section id="about" class="section">
 			<div class="container">
 				<h1 class="section-title">Historia mojego życia</h1>
-				<div class="card card--about">
+				<div class="card card-with-photo card--about">
 					<div class="row align-items-center">
+						<div class="col-sm-12 order-1 col-md-auto order-md-2">
+							<img class="card-image rounded-circle" src="assets/images/pictures/profile-picture.png" alt="Zdjęcie profilowe">
+						</div>
 						<div class="col-sm-12 order-2 col-md order-md-1">
 							<div class="card-body">
 								<h3 class="card-title">
@@ -99,9 +102,6 @@
 									Nazywam się Jonasz Kądziela i już od dawna pasjonuję się informatyką. Swoją przygodę z komputerami rozpocząłem od tworzenia prymitywnych gier 2D. Po wielu latach intensywnej nauki znacznie poszerzyłem swoje umiejętności, a miłość do informatyki pozostała.
 								</p>
 							</div>
-						</div>
-						<div class="col-sm-12 order-1 col-md-auto order-md-2">
-							<img class="card-image rounded-circle" src="assets/images/pictures/profile-picture.png" alt="Zdjęcie profilowe">
 						</div>
 					</div>
 					<div id="about-text-collapse" class="collapse card-more">
@@ -140,6 +140,111 @@
 					</div>
 					<div class="card-button">
 						<a class="js-about-text btn btn-primary" data-toggle="collapse" href="#about-text-collapse" role="button" aria-expanded="false" aria-controls="about-text-collapse">Pokaż więcej</a>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section id="authorities" class="section section--primary">
+			<div class="container">
+				<h1 class="section-title">Ludzie, których podziwiam</h1>
+				<div class="card card-with-photo card--authorities">
+					<div class="row align-items-center">
+						<div class="col-sm-12 col-md-auto">
+							<img class="card-image rounded-circle" src="assets/images/authorities/elon-musk.jpg" alt="Elon Musk">
+						</div>
+						<div class="col-sm-12 col-md">
+							<div class="card-body">
+								<h3 class="card-title">
+									Elon Musk
+								</h3>
+								<p class="card-text">
+									Cras eu felis ac lorem pretium mollis et sed orci. Suspendisse urna ex, venenatis non lacus quis, molestie consectetur leo. Quisque quam tortor, malesuada in posuere et, vestibulum at ipsum. Sed molestie vitae turpis sed tincidunt. Vestibulum a lorem augue.
+								</p>
+								<p class="card-text">
+									Proin faucibus, tortor eget maximus mollis, lectus purus placerat dui, ut dignissim lectus justo nec eros. Vivamus neque nisl, accumsan at feugiat a, pellentesque eu turpis.
+								</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="card card-with-photo card--authorities">
+					<div class="row align-items-center">
+						<div class="col-sm-12 order-1 col-md-auto order-md-2">
+							<img class="card-image rounded-circle" src="assets/images/authorities/falco-girgis.jpg" alt="Falco Girgis">
+						</div>
+						<div class="col-sm-12 order-2 col-md order-md-1">
+							<div class="card-body">
+								<h3 class="card-title">
+									Falco Girgis
+								</h3>
+								<p class="card-text">
+									Cras eu felis ac lorem pretium mollis et sed orci. Suspendisse urna ex, venenatis non lacus quis, molestie consectetur leo. Quisque quam tortor, malesuada in posuere et, vestibulum at ipsum. Sed molestie vitae turpis sed tincidunt. Vestibulum a lorem augue.
+								</p>
+								<p class="card-text">
+									Proin faucibus, tortor eget maximus mollis, lectus purus placerat dui, ut dignissim lectus justo nec eros. Vivamus neque nisl, accumsan at feugiat a, pellentesque eu turpis.
+								</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="card card-with-photo card--authorities">
+					<div class="row align-items-center">
+						<div class="col-sm-12 col-md-auto">
+							<img class="card-image rounded-circle" src="assets/images/authorities/thinmatrix.jpg" alt="ThinMatrix">
+						</div>
+						<div class="col-sm-12 col-md">
+							<div class="card-body">
+								<h3 class="card-title">
+									ThinMatrix
+								</h3>
+								<p class="card-text">
+									Cras eu felis ac lorem pretium mollis et sed orci. Suspendisse urna ex, venenatis non lacus quis, molestie consectetur leo. Quisque quam tortor, malesuada in posuere et, vestibulum at ipsum. Sed molestie vitae turpis sed tincidunt. Vestibulum a lorem augue.
+								</p>
+								<p class="card-text">
+									Proin faucibus, tortor eget maximus mollis, lectus purus placerat dui, ut dignissim lectus justo nec eros. Vivamus neque nisl, accumsan at feugiat a, pellentesque eu turpis.
+								</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="card card-with-photo card--authorities">
+					<div class="row align-items-center">
+						<div class="col-sm-12 order-1 col-md-auto order-md-2">
+							<img class="card-image rounded-circle" src="assets/images/authorities/steve-jobs.jpg" alt="Steve Jobs">
+						</div>
+						<div class="col-sm-12 order-2 col-md order-md-1">
+							<div class="card-body">
+								<h3 class="card-title">
+									Steve Jobs
+								</h3>
+								<p class="card-text">
+									Cras eu felis ac lorem pretium mollis et sed orci. Suspendisse urna ex, venenatis non lacus quis, molestie consectetur leo. Quisque quam tortor, malesuada in posuere et, vestibulum at ipsum. Sed molestie vitae turpis sed tincidunt. Vestibulum a lorem augue.
+								</p>
+								<p class="card-text">
+									Proin faucibus, tortor eget maximus mollis, lectus purus placerat dui, ut dignissim lectus justo nec eros. Vivamus neque nisl, accumsan at feugiat a, pellentesque eu turpis.
+								</p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="card card-with-photo">
+					<div class="row align-items-center">
+						<div class="col-sm-12 col-md-auto">
+							<img class="card-image rounded-circle" src="assets/images/authorities/gower-brothers.jpg" alt="Gower Brothers">
+						</div>
+						<div class="col-sm-12 col-md">
+							<div class="card-body">
+								<h3 class="card-title">
+									Gower Brothers
+								</h3>
+								<p class="card-text">
+									Cras eu felis ac lorem pretium mollis et sed orci. Suspendisse urna ex, venenatis non lacus quis, molestie consectetur leo. Quisque quam tortor, malesuada in posuere et, vestibulum at ipsum. Sed molestie vitae turpis sed tincidunt. Vestibulum a lorem augue.
+								</p>
+								<p class="card-text">
+									Proin faucibus, tortor eget maximus mollis, lectus purus placerat dui, ut dignissim lectus justo nec eros. Vivamus neque nisl, accumsan at feugiat a, pellentesque eu turpis.
+								</p>
+							</div>
+						</div>
 					</div>
 				</div>
 			</div>
