Renamed authorities to mentors

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 							<a class="nav-link js-scroll-trigger" href="#about">O mnie</a>
 						</li>
 						<li class="nav-item">
-								<a class="nav-link js-scroll-trigger" href="#authorities">Autorytety</a>
+								<a class="nav-link js-scroll-trigger" href="#mentors">Mentorzy</a>
 						</li>
 						<li class="nav-item">
 								<a class="nav-link js-scroll-trigger" href="#hobbies">Pasje</a>
@@ -144,13 +144,13 @@
 				</div>
 			</div>
 		</section>
-		<section id="authorities" class="section section--primary">
+		<section id="mentors" class="section section--primary">
 			<div class="container">
 				<h1 class="section-title">Ludzie, których podziwiam</h1>
-				<div class="card card-with-photo card--authorities">
+				<div class="card card-with-photo card--mentor">
 					<div class="row align-items-center">
 						<div class="col-sm-12 col-md-auto">
-							<img class="card-image rounded-circle" src="assets/images/authorities/elon-musk.jpg" alt="Elon Musk">
+							<img class="card-image rounded-circle" src="assets/images/mentors/elon-musk.jpg" alt="Elon Musk">
 						</div>
 						<div class="col-sm-12 col-md">
 							<div class="card-body">
@@ -167,10 +167,10 @@
 						</div>
 					</div>
 				</div>
-				<div class="card card-with-photo card--authorities">
+				<div class="card card-with-photo card--mentor">
 					<div class="row align-items-center">
 						<div class="col-sm-12 order-1 col-md-auto order-md-2">
-							<img class="card-image rounded-circle" src="assets/images/authorities/falco-girgis.jpg" alt="Falco Girgis">
+							<img class="card-image rounded-circle" src="assets/images/mentors/falco-girgis.jpg" alt="Falco Girgis">
 						</div>
 						<div class="col-sm-12 order-2 col-md order-md-1">
 							<div class="card-body">
@@ -187,10 +187,10 @@
 						</div>
 					</div>
 				</div>
-				<div class="card card-with-photo card--authorities">
+				<div class="card card-with-photo card--mentor">
 					<div class="row align-items-center">
 						<div class="col-sm-12 col-md-auto">
-							<img class="card-image rounded-circle" src="assets/images/authorities/thinmatrix.jpg" alt="ThinMatrix">
+							<img class="card-image rounded-circle" src="assets/images/mentors/thinmatrix.jpg" alt="ThinMatrix">
 						</div>
 						<div class="col-sm-12 col-md">
 							<div class="card-body">
@@ -207,10 +207,10 @@
 						</div>
 					</div>
 				</div>
-				<div class="card card-with-photo card--authorities">
+				<div class="card card-with-photo card--mentor">
 					<div class="row align-items-center">
 						<div class="col-sm-12 order-1 col-md-auto order-md-2">
-							<img class="card-image rounded-circle" src="assets/images/authorities/steve-jobs.jpg" alt="Steve Jobs">
+							<img class="card-image rounded-circle" src="assets/images/mentors/steve-jobs.jpg" alt="Steve Jobs">
 						</div>
 						<div class="col-sm-12 order-2 col-md order-md-1">
 							<div class="card-body">
@@ -230,7 +230,7 @@
 				<div class="card card-with-photo">
 					<div class="row align-items-center">
 						<div class="col-sm-12 col-md-auto">
-							<img class="card-image rounded-circle" src="assets/images/authorities/gower-brothers.jpg" alt="Gower Brothers">
+							<img class="card-image rounded-circle" src="assets/images/mentors/gower-brothers.jpg" alt="Gower Brothers">
 						</div>
 						<div class="col-sm-12 col-md">
 							<div class="card-body">
