Added hobbies section

--- a/index.html
+++ b/index.html
@@ -38,16 +38,16 @@
 							<a class="nav-link js-scroll-trigger" href="#about">O mnie</a>
 						</li>
 						<li class="nav-item">
-								<a class="nav-link js-scroll-trigger" href="#mentors">Mentorzy</a>
+							<a class="nav-link js-scroll-trigger" href="#mentors">Mentorzy</a>
 						</li>
 						<li class="nav-item">
-								<a class="nav-link js-scroll-trigger" href="#hobbies">Pasje</a>
+							<a class="nav-link js-scroll-trigger" href="#hobbies">Hobby</a>
 						</li>
 						<li class="nav-item">
-								<a class="nav-link js-scroll-trigger" href="#favourites">Ulubione</a>
+							<a class="nav-link js-scroll-trigger" href="#favourites">Ulubione</a>
 						</li>
 						<li class="nav-item">
-								<a class="nav-link js-scroll-trigger" href="#trips">Podróże</a>
+							<a class="nav-link js-scroll-trigger" href="#trips">Podróże</a>
 						</li>
 					</ul>
 				</div>
@@ -242,6 +242,61 @@
 								</p>
 								<p class="card-text">
 									Proin faucibus, tortor eget maximus mollis, lectus purus placerat dui, ut dignissim lectus justo nec eros. Vivamus neque nisl, accumsan at feugiat a, pellentesque eu turpis.
+								</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section id="hobbies" class="section">
+			<div class="container">
+				<h1 class="section-title">Moje hobby</h1>
+				<div class="row">
+					<div class="col-sm-12 col-md-6 col-lg-3 card--hobby">
+						<div class="card card-with-icon h-100">
+							<div class="card-body d-flex flex-column justify-content-center">
+								<div class="card-icon">
+									<i class="fas fa-terminal"></i>
+								</div>
+								<p class="card-text">
+									Programowanie
+								</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-sm-12 col-md-6 col-lg-3 card--hobby">
+						<div class="card card-with-icon h-100">
+							<div class="card-body d-flex flex-column justify-content-center">
+								<div class="card-icon">
+									<i class="fas fa-paint-brush"></i>
+								</div>
+								<p class="card-text">
+									Grafika komputerowa
+								</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-sm-12 col-md-6 col-lg-3 card--hobby">
+						<div class="card card-with-icon h-100">
+							<div class="card-body d-flex flex-column justify-content-center">
+								<div class="card-icon">
+									<i class="fas fa-desktop"></i>
+								</div>
+								<p class="card-text">
+									Animacje 2D
+								</p>
+							</div>
+						</div>
+					</div>
+					<div class="col-sm-12 col-md-6 col-lg-3 card--hobby">
+						<div class="card card-with-icon h-100">
+							<div class="card-body d-flex flex-column justify-content-center">
+								<div class="card-icon">
+									<i class="fas fa-robot"></i>
+								</div>
+								<p class="card-text">
+									Robotyka
 								</p>
 							</div>
 						</div>
