Improved intro header & footer

--- a/index.html
+++ b/index.html
@@ -56,23 +56,25 @@
 		<header id="intro" class="hero hero--primary">
 			<div class="container h-100">
 				<div class="row align-items-center h-100">
-					<div class="col-md-10 offset-md-1">
-						<div class="card card--intro flex-row align-items-center">
-							<div class="col">
-								<img class="card-image" src="assets/images/pictures/fullbody-picture.png" alt="Zdjęcie całej osoby">
-							</div>
-							<div class="col card-body">
-								<h3 class="card-title font-weight-bold text-white">
-									Cześć!
-								</h3>
-								<p class="card-subtitle">
-									Nazywam się
-									<span class="font-weight-bold text-white">Jonasz Kądziela</span>
-									i...
-								</p>
-								<p class="card-text">
-									<span class="js-intro"></span>
-								</p>
+					<div class="m-auto">
+						<div class="card card--intro">
+							<div class="row align-items-center flex-nowrap">
+								<div class="col">
+									<img class="card-image" src="assets/images/pictures/fullbody-picture.png" alt="Zdjęcie całej osoby">
+								</div>
+								<div class="col card-body">
+									<h3 class="card-title font-weight-bold text-white">
+										Cześć!
+									</h3>
+									<p class="card-subtitle">
+										Nazywam się
+										<span class="font-weight-bold text-white">Jonasz Kądziela</span>
+										i...
+									</p>
+									<p class="card-text">
+										<span class="js-intro"></span>
+									</p>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -315,19 +317,19 @@
 							<a href="https://www.linkedin.com/in/jonaszkadziela" target="_blank">
 								<i class="fab fa-linkedin-in"></i>
 							</a>
-							<a href="https://www.youtube.com/channel/UCRGptWGCh-CsEEKVOFn_uwg" target="_blank">
-								<i class="fab fa-youtube"></i>
+							<a href="https://twitter.com/jonaszkadziela" target="_blank">
+								<i class="fab fa-twitter"></i>
 							</a>
 						</div>
 						<div class="col-sm-12 col-md-6 text-md-left p-0">
+							<a href="https://www.youtube.com/channel/UCRGptWGCh-CsEEKVOFn_uwg" target="_blank">
+								<i class="fab fa-youtube"></i>
+							</a>
 							<a href="https://github.com/jonaszkadziela" target="_blank">
 								<i class="fab fa-github"></i>
 							</a>
 							<a href="https://stackoverflow.com/users/9310738/jonasz-kadziela" target="_blank">
 								<i class="fab fa-stack-overflow"></i>
-							</a>
-							<a href="https://www.jonaszkadziela.pl/" target="_blank">
-								<img class="jk-logo" src="assets/images/brand/jk-logo-black.svg" alt="JK Logo">
 							</a>
 						</div>
 					</div>
