Added favourites section

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 		<section id="about" class="section">
 			<div class="container">
 				<h1 class="section-title">Historia mojego życia</h1>
-				<div class="card card-with-photo card--about">
+				<div class="card card-with-horizontal-image card--about">
 					<div class="row align-items-center">
 						<div class="col-sm-12 order-1 col-md-auto order-md-2">
 							<img class="card-image rounded-circle" src="assets/images/pictures/profile-picture.png" alt="Zdjęcie profilowe">
@@ -149,7 +149,7 @@
 		<section id="mentors" class="section section--primary">
 			<div class="container">
 				<h1 class="section-title">Ludzie, których podziwiam</h1>
-				<div class="card card-with-photo card--mentor">
+				<div class="card card-with-horizontal-image card--mentor">
 					<div class="row align-items-center">
 						<div class="col-sm-12 col-md-auto">
 							<img class="card-image rounded-circle" src="assets/images/mentors/elon-musk.jpg" alt="Elon Musk">
@@ -169,7 +169,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="card card-with-photo card--mentor">
+				<div class="card card-with-horizontal-image card--mentor">
 					<div class="row align-items-center">
 						<div class="col-sm-12 order-1 col-md-auto order-md-2">
 							<img class="card-image rounded-circle" src="assets/images/mentors/falco-girgis.jpg" alt="Falco Girgis">
@@ -189,7 +189,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="card card-with-photo card--mentor">
+				<div class="card card-with-horizontal-image card--mentor">
 					<div class="row align-items-center">
 						<div class="col-sm-12 col-md-auto">
 							<img class="card-image rounded-circle" src="assets/images/mentors/thinmatrix.jpg" alt="ThinMatrix">
@@ -209,7 +209,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="card card-with-photo card--mentor">
+				<div class="card card-with-horizontal-image card--mentor">
 					<div class="row align-items-center">
 						<div class="col-sm-12 order-1 col-md-auto order-md-2">
 							<img class="card-image rounded-circle" src="assets/images/mentors/steve-jobs.jpg" alt="Steve Jobs">
@@ -229,7 +229,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="card card-with-photo">
+				<div class="card card-with-horizontal-image">
 					<div class="row align-items-center">
 						<div class="col-sm-12 col-md-auto">
 							<img class="card-image rounded-circle" src="assets/images/mentors/gower-brothers.jpg" alt="Gower Brothers">
@@ -300,6 +300,76 @@
 								<p class="card-text">
 									Robotyka
 								</p>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</section>
+		<section id="favourites" class="section section--primary">
+			<div class="container">
+				<h1 class="section-title">Moje ulubione</h1>
+				<h3 class="card-section-title text-white">Filmy i programy TV</h3>
+				<div class="card-section">
+					<div class="row">
+						<div class="col-md-4 col-lg-2 card--favourite">
+							<div class="card card-with-vertical-image h-100">
+								<img class="card-img-top" src="assets/images/favourites/posters/the-judge.jpg" alt="The Judge Poster">
+								<div class="card-body d-flex flex-column justify-content-center">
+									<p class="card-title">
+										<span class="d-block">The Judge</span>(2014)
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4 col-lg-2 card--favourite">
+							<div class="card card-with-vertical-image h-100">
+								<img class="card-img-top" src="assets/images/favourites/posters/interstellar.jpg" alt="Interstellar Poster">
+								<div class="card-body d-flex flex-column justify-content-center">
+									<p class="card-title">
+										<span class="d-block">Interstellar</span>(2014)
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4 col-lg-2 card--favourite">
+							<div class="card card-with-vertical-image h-100">
+								<img class="card-img-top" src="assets/images/favourites/posters/the-godfather.jpg" alt="The Godfather Poster">
+								<div class="card-body d-flex flex-column justify-content-center">
+									<p class="card-title">
+										<span class="d-block">The Godfather</span>(1972)
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4 col-lg-2 card--favourite">
+							<div class="card card-with-vertical-image h-100">
+								<img class="card-img-top" src="assets/images/favourites/posters/demolition.jpg" alt="Demolition Poster">
+								<div class="card-body d-flex flex-column justify-content-center">
+									<p class="card-title">
+										<span class="d-block">Demolition</span>(2015)
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4 col-lg-2 card--favourite">
+							<div class="card card-with-vertical-image h-100">
+								<img class="card-img-top" src="assets/images/favourites/posters/intouchables.jpg" alt="Intouchables Poster">
+								<div class="card-body d-flex flex-column justify-content-center">
+									<p class="card-title">
+										<span class="d-block">Intouchables</span>(2011)
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="col-md-4 col-lg-2 card--favourite">
+							<div class="card card-with-vertical-image h-100">
+								<img class="card-img-top" src="assets/images/favourites/posters/battlebots.jpg" alt="BattleBots Poster">
+								<div class="card-body d-flex flex-column justify-content-center">
+									<p class="card-title">
+										<span class="d-block">BattleBots</span>(2015)
+									</p>
+								</div>
 							</div>
 						</div>
 					</div>
